methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:1: error: ';' expected but 'def' found.
erride def run() {for (i<-1 to 3) {faireGrandMotif};
       ^